--- a/indwx.html
+++ b/indwx.html
@@ -220,7 +220,7 @@
     
           <div class="display">
 
-         <h5> we beleive in making travels safe and comfortable with minimun cost and minimun damage to environment
+         <h5> we believe in making travels safe and comfortable with minimun cost and minimun damage to environment
             feel free to travel with us !!!!! </h5>
         
           </div>
